# vigia-enfermeria

./: .gitignore  BACKLOG.md  CLAUDE.md  PLAN.md  PLAN_MAESTRO.md  README.md  app.js  index.html  pyproject.toml  requirements.txt  styles.css
.github/workflows/: ci.yml  daily.yml  maintenance.yml
data/: changelog.json  items.json  meta.json  sources_status.json  targets.json
docs/data/: changelog.json  meta.json  sources_status.json  targets.json
incidents/: 2026-06-26-errores-telegram-usuarios.md
state/: seen.db
tests/: test_aena.py  test_boe_pdf_anexos.py  test_boe_weekend.py  test_canal_isabel_ii_calendario.py  test_ciemat_source.py  test_cm_ficha_enfermeria.py  test_codem_feeds.py  test_comunidad_madrid_dates.py  test_csic_sede.py  test_dashboard.py  test_datos_madrid.py  test_detail_watcher.py  test_diff_summarizer.py  test_enricher.py  test_extractor.py  test_html_pdf_helpers.py  test_iac.py  test_isciii.py  test_las_rozas.py  test_main_errors.py  test_maintenance.py  test_notifier.py  test_organism_coverage.py  test_probe.py  test_sap_successfactors.py  test_storage.py  test_universidades_madrid.py
utils/: test_telegram.py
vigia/: _default_profile.py  config.py  dashboard.py  diff_summarizer.py  enricher.py  extractor.py  main.py  maintenance.py  notifier.py  profile.py  storage.py
vigia/sources/: _hash_watcher.py  _html.py  _pdf.py  administracion_gob.py  aena.py  ayuntamiento_madrid.py  base.py  boam.py  bocm.py  boe.py  canal_isabel_ii.py  ciemat.py  codem.py  (+12 more)
vigia_enfermeria/: __init__.py  __main__.py
web/: app.js  index.html  styles.css
(+1 files in other folders)
